
name:                lnfunctors
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          kcarter@galois.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.LnFunctor
                       Type.Families
                       -- Type.Witness
                       -- ->
                       Data.LnFunctor.Apply
                       Data.LnFunctor.Alt
                       Data.LnFunctor.Bind
                       Data.LnFunctor.Plus
                       Control.LnApplicative
                       Control.LnMonad
                       -- <-
                       -- Data.LnFunctor.Copointed
                       Data.LnFunctor.Coapply
                       -- Data.LnFunctor.Coalt
                       -- Data.LnFunctor.Extend
                       -- Data.LnFunctor.Minus
                       -- Control.LnCoapplicative
                       -- Control.LnComonad
                       --
                       Control.LnMonad.Reader
                       Control.LnMonad.List.Reader
                       Control.LnMonad.List.Writer
                       Control.LnMonad.List.State
                       Control.LnMonad.List.RW
                       Control.LnMonad.Infer
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base -any,
                       containers -any
  hs-source-dirs:      src
  default-language:    Haskell2010

